# cmosx

./: .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
a/: CMakeLists.txt  MathFunctions.cxx
b/: CMakeLists.txt  test-sqrt.cpp
